# git-rt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  dist-workspace.toml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/superpowers/specs/: 2026-04-06-simplify-action-config-design.md  2026-05-27-expanded-view-base-resolution-design.md
src/: app.rs  lib.rs  main.rs
src/actions/: mod.rs
src/config/: mod.rs
src/fuzzy/: mod.rs
src/git/: base.rs  cli.rs  commits.rs  mod.rs  worker.rs  worktree.rs
src/github/: client.rs  convert.rs  mod.rs  poller.rs  query.rs  types.rs
src/state/: mod.rs
src/theme/: catalog.rs  color.rs  mod.rs  parser.rs  resolver.rs
src/theme/builtin/: catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  everforest-dark.toml  gruvbox-dark.toml  kanagawa.toml  nord.toml  one-dark.toml  rose-pine.toml  solarized-dark.toml  tokyo-night.toml
src/ui/: colors.rs  commits_tab.rs  diff_overlay.rs  fit.rs  format.rs  header.rs  help_overlay.rs  mod.rs  pr_line.rs  pr_tab.rs  pr_widget.rs  status_format.rs  status_line.rs  switch_dialog.rs  tabs.rs  tree.rs
src/watcher/: activity.rs  mod.rs  worktree.rs
tests/: auto_follow.rs  base_detect.rs  branch_diff.rs  cli_compute_status.rs  cli_parsers.rs  pinned_pane.rs  switch_dialog_e2e.rs
xtask/: Cargo.toml
xtask/src/: install.rs  main.rs
