[package]
name = "perch"
version = "1.3.0"
edition = "2021"
description = "A real-time terminal dashboard for git changes"
license = "MIT"
repository = "https://github.com/upsertco/perch"
readme = "README.md"
keywords = ["git", "tui", "terminal", "dashboard", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "perch"
path = "src/main.rs"

[[bin]]
name = "git-perch"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Git
gix = { version = "0.81", features = [
    "index",
    "worktree-mutation",
    "blob-diff",
    "status",
    "excludes",
] }

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

# Async / channels
crossbeam-channel = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Unicode display-width math for narrow-terminal adaptive rendering
unicode-width = "0.2"

# Fuzzy matching for the switch dialog and future filter UIs
nucleo-matcher = "0.3"

# HTTP client for GitHub API
ureq = { version = "3", features = ["json"] }

# JSON parsing
serde_json = "1"

# Logging (optional, for debugging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"
